index.html aangepast

--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,7 @@
     </div>
 
     <script>
+        // Gebruik de live URL van je Render-service hier
         const RENDER_URL = "https://chinees-poepen-game.onrender.com";
 
         const socket = io(RENDER_URL, {
